test/files/neg/tcpoly_typeapp.scala
abstract class Test {
 type t[m[x] <: Bound[x], Bound[x]]
 class Super[X]
 class SubWrong[X]
 val x: t[SubWrong, Super]
}
